fixed: license and description
git-svn-id: http://svn.seqan.de/seqan/trunk@10470 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/util/ports/science/seqan/Portfile
+++ b/seqan/util/ports/science/seqan/Portfile
@@ -17,7 +17,7 @@ description         C++ Sequence Analysis Library
 long_description    SeqAn is an open source C++ library of efficient algorithms \
                     and data structures for the analysis of sequences with the \
                     focus on biological data. The library is licensed under the \
-                    3-clause BSD license, the applications are licensed under GPL.
+                    3-clause BSD license except the applications which are GPL.
 
 homepage            http://www.seqan.de
 
