Changed how the `SEQAN_OMP_PRAGMA` macro is invoked to make it logically consistent.
git-svn-id: http://svn.seqan.de/seqan/trunk@10494 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/tests/parallel/CMakeLists.txt
+++ b/seqan/core/tests/parallel/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (core_tests_parallel)
 
+set (CMAKE_CXX_FLAGS "-fopenmp")
+
 # Update the list of file names below if you add source files to your test.
 seqan_add_test_executable(test_parallel test_parallel.cpp
                           test_parallel_atomic_misc.h
