--- a/seqan/core/tests/parallel/CMakeLists.txt
+++ b/seqan/core/tests/parallel/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 project (core_tests_parallel)
 
-set (CMAKE_CXX_FLAGS "-fopenmp")
+# Enable OpenMP if found.
+if (OPENMP_FOUND)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif (OPENMP_FOUND)
 
 # Update the list of file names below if you add source files to your test.
 seqan_add_test_executable(test_parallel test_parallel.cpp
