--- a/seqan/core/apps/razers/CMakeLists.txt
+++ b/seqan/core/apps/razers/CMakeLists.txt
@@ -10,5 +10,12 @@ seqan_add_executable(razers razers.cpp
 			    razers_spliced.h
 			    readSimulator.h)
 
+# Install pair_align in /bin directory
 install(TARGETS razers
         DESTINATION bin)
+
+# Run app tests if python was found
+if(PYTHONINTERP_FOUND)
+  add_test(NAME app_test_razers COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+  message(STATUS "add_test(NAME app_test_pair_align COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})")
+endif(PYTHONINTERP_FOUND)
