Adding app tests for RazerS 2.
git-svn-id: http://svn.seqan.de/seqan/trunk@10582 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/razers2/CMakeLists.txt
+++ b/seqan/core/apps/razers2/CMakeLists.txt
@@ -9,5 +9,12 @@ seqan_add_executable(razers2 razers.cpp
                              razers_matepairs.h
                              readSimulator.h)
 
+# Install razers2 in /bin directory
 install(TARGETS razers2
         DESTINATION bin)
+
+# Run app tests if python was found
+if(PYTHONINTERP_FOUND)
+  add_test(NAME app_test_razers2 COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+  message(STATUS "add_test(NAME app_test_razers2 COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})")
+endif(PYTHONINTERP_FOUND)
