App tests for mason.
git-svn-id: http://svn.seqan.de/seqan/trunk@10587 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/mason/CMakeLists.txt
+++ b/seqan/core/apps/mason/CMakeLists.txt
@@ -11,5 +11,13 @@ seqan_add_executable(mason mason.cpp
 			   store_config.h
 			   util.h)
 
+# Install mason in /bin directory
 install(TARGETS mason
         DESTINATION bin)
+
+# Run app tests if python was found
+if(PYTHONINTERP_FOUND)
+  add_test(NAME app_test_mason COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+  message(STATUS "add_test(NAME app_test_mason COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})")
+endif(PYTHONINTERP_FOUND)
+
