--- a/seqan/core/apps/rabema/CMakeLists.txt
+++ b/seqan/core/apps/rabema/CMakeLists.txt
@@ -21,5 +21,13 @@ seqan_add_executable(rabema rabema.cpp
 
 seqan_add_executable(do_search do_search.cpp witio.h find_myers_ukkonen_ext.h)
 
+# Install rabema in /bin directory
 install(TARGETS rabema
         DESTINATION bin)
+
+# Run app tests if python was found
+if(PYTHONINTERP_FOUND)
+  add_test(NAME app_test_rabema COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+  message(STATUS "add_test(NAME app_test_rabema COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.py ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})")
+endif(PYTHONINTERP_FOUND)
+
