added tests in cmake
git-svn-id: http://svn.seqan.de/seqan/trunk@10596 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/apps/razers/CMakeLists.txt
+++ b/seqan/core/apps/razers/CMakeLists.txt
@@ -10,7 +10,7 @@ seqan_add_executable(razers razers.cpp
 			    razers_spliced.h
 			    readSimulator.h)
 
-# Install pair_align in /bin directory
+# Install razers in /bin directory
 install(TARGETS razers
         DESTINATION bin)
 
