Splitting index tests into multiple binaries.
git-svn-id: http://svn.seqan.de/seqan/trunk@10685 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/tests/index/CMakeLists.txt
+++ b/seqan/core/tests/index/CMakeLists.txt
@@ -2,11 +2,26 @@ cmake_minimum_required (VERSION 2.6)
 project (core_tests_index)
 
 # Update the list of file names below if you add source files to your test.
-seqan_add_test_executable(test_index test_index.cpp
-				     test_crosscompare.h
-				     test_index_creation.h
-				     test_index_helpers.h
-				     test_qgram_index.h
-				     test_sa_bwtwalk.h
-				     test_shapes.h
-				     test_stree_iterators.h)
+seqan_add_test_executable(test_index_creation
+                          test_index_creation.cpp
+                          test_index_creation.h)
+
+seqan_add_test_executable(test_index_crosscompare
+                          test_index_crosscompare.cpp
+                          test_crosscompare.h)
+
+seqan_add_test_executable(test_index_qgram
+                          test_index_qgram.cpp
+                          test_qgram_index.h)
+
+seqan_add_test_executable(test_index_sa_bwtwalk
+                          test_index_sa_bwtwalk.cpp
+                          test_sa_bwtwalk.h)
+
+seqan_add_test_executable(test_index_shapes
+                          test_index_shapes.cpp
+                          test_shapes.h)
+
+seqan_add_test_executable(test_index_stree_iterators
+                          test_index_stree_iterators.cpp
+                          test_stree_iterators.h)
