Splitting up crosscompare test even further, compiles with GCC 4.2 now.
git-svn-id: http://svn.seqan.de/seqan/trunk@10686 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/seqan/core/tests/index/CMakeLists.txt
+++ b/seqan/core/tests/index/CMakeLists.txt
@@ -6,8 +6,12 @@ seqan_add_test_executable(test_index_creation
                           test_index_creation.cpp
                           test_index_creation.h)
 
-seqan_add_test_executable(test_index_crosscompare
-                          test_index_crosscompare.cpp
+seqan_add_test_executable(test_index_crosscompare_char
+                          test_index_crosscompare_char.cpp
+                          test_crosscompare.h)
+
+seqan_add_test_executable(test_index_crosscompare_dna
+                          test_index_crosscompare_dna.cpp
                           test_crosscompare.h)
 
 seqan_add_test_executable(test_index_qgram
